; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-pl031.c_pl031_ioctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-pl031.c_pl031_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.pl031_local = type { i64 }

@RTC_MIS = common dso_local global i64 0, align 8
@ENOIOCTLCMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i64)* @pl031_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pl031_ioctl(%struct.device* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.pl031_local*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load %struct.device*, %struct.device** %5, align 8
  %10 = call %struct.pl031_local* @dev_get_drvdata(%struct.device* %9)
  store %struct.pl031_local* %10, %struct.pl031_local** %8, align 8
  %11 = load i32, i32* %6, align 4
  switch i32 %11, label %26 [
    i32 129, label %12
    i32 128, label %19
  ]

12:                                               ; preds = %3
  %13 = load %struct.pl031_local*, %struct.pl031_local** %8, align 8
  %14 = getelementptr inbounds %struct.pl031_local, %struct.pl031_local* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @RTC_MIS, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @__raw_writel(i32 1, i64 %17)
  store i32 0, i32* %4, align 4
  br label %29

19:                                               ; preds = %3
  %20 = load %struct.pl031_local*, %struct.pl031_local** %8, align 8
  %21 = getelementptr inbounds %struct.pl031_local, %struct.pl031_local* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @RTC_MIS, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @__raw_writel(i32 0, i64 %24)
  store i32 0, i32* %4, align 4
  br label %29

26:                                               ; preds = %3
  %27 = load i32, i32* @ENOIOCTLCMD, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %26, %19, %12
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local %struct.pl031_local* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @__raw_writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
